# micro_saas_ods_2

./: .env.example  .gitignore  README.md  pyproject.toml  rag_qwen.py  ragas_report.html  ragas_results.json  ragas_results_optimized.json  requirements.txt
app/: .env.local.example  next.config.js  package-lock.json  package.json
app/app/: globals.css  layout.tsx  page.tsx
app/hooks/: useChatHistory.ts
backend/: Dockerfile  README.md  app.py  requirements.txt
data/: baseline_chunks.jsonl  chunks.jsonl  main.py
data/eval/: eval_dataset.jsonl
data/matplotlib/en/: animations.html  axes_intro.html  customizing.html  figure_intro.html  imshow_extent.html  quick_start.html  text_intro.html
data/matplotlib/html/: colormaps.html
data/matplotlib/pt/: Animações usando Matplotlib — Documentação Matplotlib 3.10.8.html  Anotações — Documentação Matplotlib 3.10.8.html  (+36 more)
data/treatment_pipeline/: embedder.py  vector_store.py
docs/: pt_html_audit.json  truncation_measure.json
docs/superpowers/: HANDOFF.md  SETUP_HF_SPACE.md
scripts/: audit_pt_html.py  deploy_space.py  measure_truncations.py  smoke_test.py
src/: baseline_ingest.py  baseline_snapshot.py  config.py  device.py  glossary_repair.py  html_extractor.py  indexer.py  medium_extractor.py  rag_query.py  translator.py
src/eval/: __init__.py  backend_eval_integration.py  ragas_dashboard.py  ragas_evaluator.py
tests/: test_backend.py  test_chunker.py  test_device.py  test_glossary_repair.py  test_html_extractor.py  test_medium_extractor.py  test_rag_query.py  test_translator.py
(+138 files in other folders)
