[project]
name = "rag-assistente-pt"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "groq>=0.13.0",
    "sentence-transformers>=3.0.0",
    "chromadb>=0.5.0",
    "trafilatura>=1.12.0",
    "python-dotenv>=1.0.0",
    "ragas>=0.2.0",
    "langchain-groq>=0.2.0",
    "datasets>=3.0.0",
    "tiktoken>=0.8.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
